--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Bootstrap CSS -->
     <link
       rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+      href="css/bootstrap.min.css"
     />
 
     <link rel="stylesheet" href="css/style.css" />
@@ -29,7 +29,7 @@
           >
         <img id="featured" class="img-fluid img-res" src="img/preview.jpg" alt="">
         </div>
-          <div style="height: 100px;">
+          <div class="mt-5 pt-5" style="height: 100px;">
             <div class="row mt-2">
               <div class="col-sm">
                 <img id="stamp1" class="img-fluid" src="img/1.jpg" alt="" />
@@ -75,9 +75,9 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    <script src="js/jquery-3.5.1.slim.min.js"></script>
+    <script src="js/popper.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
